--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>LandingPageAngular</title>
-  <base href="/">
+  <base href="/LandingPage/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>html,body{background:#192449;color:#e5e7eb;min-height:100%}
